style.css
/* ... */
.case-study-header img {
    display: block;
    width: 100%;
    max-width: 1728px;
    margin: auto;
    padding-top: 118px;
}

.content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 54px;
    margin: 0px auto;
    max-width: var(--width-xl);
}

.case-box {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 16px;
    gap: 24px;
    margin: 0px auto;
    width: var(--width-l);
    background: var(--lightgray);
}

.info-box {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 4px;
    max-width: 798px;

    /* Inside auto layout */
    flex: none;
    order: 0;
    align-self: stretch;
    flex-grow: 0;
}

.case-block-xl {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 32px;
    max-width: var(--width-xl);
    margin: 0px auto;
}

.case-block-l {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 32px;
    max-width: var(--width-l);
    margin: 0px auto;
}

.case-block-m {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 32px;
    max-width: var(--width-m);
    padding: 0px 85px;
}

.case-block-s {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 32px;
    max-width: var(--width-s);
    padding: 0px 170px;
}

.case-image-m img{
    display: block;
    width: 100%;
    max-width: var(--width-m);
    margin: 0px auto;
}

.case-image-l img{
    display: block;
    width: 100%;
    max-width: var(--width-l);
    margin: 0px auto;
}

.case-image-xl img{
    display: block;
    width: 100%;
    max-width: var(--width-xl);
    margin: 0px auto;
}

iframe {
    display: block;
    border-style:none;
}

.v-spacing-m {
    margin-top: 56px;
}

/**BACK TO TOP BUTTON**/

#back-to-top-btn {
    font-family: 'Open Sans', sans-serif;
    display: block;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: var(--black);
    color: #fff;
    border: none;
    padding: 10px 15px;
    cursor: pointer;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
}

#back-to-top-btn.visible {
    opacity: 1;
    pointer-events: auto;
}

#back-to-top-btn:hover {
    background-color: var(--lightgray);
    border: 1px solid var(--black);
    color: var(--black);
}


@media (max-width: 1024px) {
    .navbar {
        padding: 16px 32px;
    }

    main {
        padding-left: 32px;
        padding-right: 32px;
        box-sizing: border-box;
    }

    .case-studies {
        padding-left: 32px;
        padding-right: 32px;
        box-sizing: border-box;
    }

    .card-img {
        width: 240px;
        height: 200px;
    }

    .card {
        gap: 32px;
    }

    .contact {
        padding-left: 32px;
        padding-right: 32px;
        box-sizing: border-box;
    }
}

@media (max-width: 600px) {

    h1 {
        font-size: 32px !important;
        line-height: 48px;
    }
    
    h2 {
        font-size: 28px;
        line-height: 42px;
    }
    
    h3 {
        font-size: 24px;
        line-height: 36px;
    }
    
    h4 {
        font-size: 20px;
        line-height: 30px;
    }

    h5 {
        font-size: 18px;
        line-height: 27px;
    }

    ul li, ol li {
        margin-bottom: -8px;
    }

    .navbar{
        padding: 14px 24px;
        max-width: 390px;
        gap: 20px;
        margin: 0px auto;
    }

    .navbar ul {
        gap: 16px;
    }

    main {
        gap: 16px;
        margin: 0px auto;
        max-width: var(--width-mobile);
        padding-top: 72px;
        padding-bottom: 0;
    }

    .case-studies {
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        margin: 0px auto;
        max-width: var(--width-mobile);
        margin-top: 32px;
    }
    
    .card {
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        padding: 0px;
        gap: 0px;
        max-width: var(--width-mobile);
    }
    
    .card-img {
        width: 100%;
        height: 140px;
    }

    .card-img img {
        object-fit: contain;
    }

    .card-info {
        padding: 16px;
    }

    .contact {
        padding: 0px;
        gap: 16px;
        max-width: var(--width-xl);
        margin: 40px auto 0px;
    }

    footer {
        margin-top: 40px;
    }

    .footer-content {
        flex-direction: column;
        gap: 32px;
        padding: 0 24px;
    }

    .footer-copy {
        padding: 0 24px;
        margin-top: 32px;
        text-align: left;
    }

    .about-img img {
        width: var(--width-mobile);
        display: block;
        margin: 40px auto 0px;
    }

    .content-wrapper {
        gap: 40px;
        margin: 0px auto;
        max-width: var(--width-mobile);
    }

    .case-box {
        padding: 16px;
        gap: 24px;
        margin: 0px auto;
        width: 294px;
    }

    .info-box {
        max-width: 294px;
    }

    .case-block-xl {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        gap: 32px;
        max-width: var(--width-xl);
    }

    .case-block-l {
        gap: 16px;
        max-width: var(--width-mobile);
    }

    .case-block-m {
        gap: 16px;
        max-width: var(--width-mobile);
        padding: 0px;
    }

    .case-block-s {
        gap: 16px;
        max-width: var(--width-mobile);
        padding: 0px;
    }

    iframe {
        display: block;
        max-width: var(--width-mobile);

    }
}

